--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
-    "pg": "^8.0.2"
+    "pg": "^8.0.2",
+    "pgtools": "^0.3.0"
   },
   "devDependencies": {},
   "scripts": {
